--- a/.sequelizerc
+++ b/.sequelizerc
@@ -6,6 +6,6 @@ module.exports = {
     config: path.resolve('src','config','database.js'),
     'models-path': path.resolve('src','app','models'),
     'seeders-path': path.resolve('src','database','seeders'),
-    'migrations-path': path.resolve('src','databse','migrations'),
+    'migrations-path': path.resolve('src','database','migrations'),
 };
 
